# RL_Voxel-Agent_PPO_V1

./: FacadeAuthoring with hops.gh  FacadeAuthoring.gh  Fibo_Facade.gh  RL_Voxel_V1.gh  RL_Voxel_V2.gh  RL_Voxel_V3.gh  TEST FacadePanelizationGeometry_00.gh  TileEvaluator.gh  agent.py  agent_training.py  combined_server.py  env.py  gh_file_runner.py  logging_callback.py  osm_building_mesh.py  osm_wind_xlb.py  pyproject.toml  temp_reward.json  temp_voxel_input.json  voxel_env.py  voxel_server.py  wind_analysis.py
gh_files/: Paneling cost reward.gh
ppo_voxel_tensorboard/PPO_10/: events.out.tfevents.1753702343.AnjiPC.21316.0
ppo_voxel_tensorboard/PPO_11/: events.out.tfevents.1753702859.AnjiPC.10360.0
ppo_voxel_tensorboard/PPO_12/: events.out.tfevents.1753731640.AnjiPC.42952.0
ppo_voxel_tensorboard/PPO_13/: events.out.tfevents.1753774777.AnjiPC.35496.0
ppo_voxel_tensorboard/PPO_14/: events.out.tfevents.1753778106.AnjiPC.17064.0
ppo_voxel_tensorboard/PPO_15/: events.out.tfevents.1753870791.AnjiPC.32812.0
ppo_voxel_tensorboard/PPO_16/: events.out.tfevents.1753870900.AnjiPC.44408.0
