[project]
name = "rl-voxel-agent-ppo-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compute-rhino3d>=0.12.2",
    "honeybee-core>=1.61.30",
    "honeybee-radiance>=1.66.184",
    "ladybug-geometry>=1.34.9",
    "lbt-recipes>=0.26.23",
    "sb3-contrib>=2.7.0",
    "stable-baselines3[extra]>=2.6.0",
    "tensorboard>=2.20.0",
    "torch==2.7.0",
]
